target/classes/META-INF/fabric8/openshift/wmq-amq-bridge-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=wmq-amq-bridge&var-version=1.0
  labels:
    app: wmq-amq-bridge
    provider: fabric8
    version: "1.0"
    group: org.example.fuse
  name: wmq-amq-bridge
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: wmq-amq-bridge
    provider: fabric8
    group: org.example.fuse
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=wmq-amq-bridge&var-version=1.0
      labels:
        app: wmq-amq-bridge
        provider: fabric8
        version: "1.0"
        group: org.example.fuse
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"undertow":{"io-threads":1, "worker-threads":2 }}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: wmq-amq-bridge:1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: wmq-amq-bridge:1.0
    type: ImageChange
