target/classes/META-INF/fabric8/openshift/wmq-amq-bridge-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: wmq-amq-bridge
    provider: fabric8
    version: "1.0"
    group: org.example.fuse
  name: wmq-amq-bridge
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wmq-amq-bridge
    provider: fabric8
    group: org.example.fuse
